...
        name: "Musicals",
        id: 8,
        slug: "musicals"
      },
      description:
        "Be in the room where it happens and catch Lin-Manuel Miranda's multi-award-winning show in the West End. *Hamilton* revolutionises the stage with a dynamic retelling of the ten-dollar founding father, Alexander Hamilton, through a catchy cross-genre score that blends various musical styles.",
      displayName: "Hamilton",
      endDate: "2024-09-28",
      genreTags: ["Musical"],
      hasPromotion: false,
      heroImageUrl: "http://localhost:3000/assets/Hamilton_-_Hero.jpg",
      id: 20561,
      images: {
...
        name: "Musicals",
        id: 8,
        slug: "musicals"
      },
      description:
        "Divorced, beheaded, live on stage! This award-winning musical brings the six wives of Henry VIII to life in a sensational pop concert. These fierce and feisty queens reclaim their stories, with catchy tunes and empowering lyrics, it's a historical remix that reigns supreme.",
      displayName: "SIX the Musical",
      endDate: "2024-11-03",
      genreTags: ["Musical"],
      hasPromotion: false,
      heroImageUrl:
        "http://localhost:3000/assets/SIX23042_TodayTix_1440x580pxls.jpg",
      id: 1,
...
        name: "Musicals",
        id: 8,
        slug: "musicals"
      },
      description:
        'How did the Wicked Witch of the West get that name? Find out at this prequel to *The Wizard of Oz*, which has defied gravity in London since 2006. Hear songs like "Popular" and "Defying Gravity" at the story of how Elphaba and Glinda started out as friends before their lives changed for good.',
      displayName: "Wicked",
      endDate: "2024-12-15",
      genreTags: ["Family", "Musical"],
      hasPromotion: true,
      heroImageUrl: "http://localhost:3000/assets/Wicked_-_Hero.jpg",
      id: 2,
      images: {
...
        name: "Musicals",
        id: 8,
        slug: "musicals"
      },
      description:
        "Luck be a show tonight! Starring Marisha Wallace and Celinde Schoenmaker, book your tickets to see this vibrant tale of gamblers, showgirls, and unlikely romances in 1950s New York City. Frank Loesser's sweeping score continues to delight audiences over seventy years later.",
      displayName: "Guys & Dolls",
      endDate: "2024-08-31",
      genreTags: ["Musical"],
      hasPromotion: true,
      heroImageUrl: "http://localhost:3000/assets/BT_G_D_TTG_1440x580.png",
      id: 3,
      images: {
...
        name: "Musicals",
        id: 8,
        slug: "musicals"
      },
      description:
        "Simply the best musical in the West End! Journey through Tina Turner's chart-topping hits, from \"Proud Mary\" to \"What's Love Got to Do with It.\" Discover the inspiring story of her early struggles and rise to stardom, and witness how this rock 'n' roll legend defied boundaries.",
      displayName: "Tina",
      endDate: "2025-05-31",
      genreTags: ["Musical"],
      hasPromotion: true,
      heroImageUrl:
        "http://localhost:3000/assets/Tina_-_The_Tina_Turner_Musical_-_Hero.jpg",
      id: 4,
...
