...
  return (
    <View style={styles.container}>
      <Text variant="displaySmall">{show.displayName}</Text>
      <View style={styles.selectionContainer}>
        <Text variant="titleLarge">
          {showtimes.length
            ? "Select a Time"
            : "There are no rush shows currently available."}
        </Text>
        <View style={styles.selectionButtonsContainer}>
          {showtimes.map(showtime => {
            const isSelected = showtime.id === selectedShowtime?.id;
            return (
...
        </View>
      </View>
      {customerId &&
        selectedShowtime &&
        showtimes.some(({ id }) => id === selectedShowtime.id) && (
          <View style={styles.selectionContainer}>
            <Text variant="titleLarge">Number of Tickets</Text>
            <View style={styles.selectionButtonsContainer}>
              {numberOfTickets.map(number => {
                const isSelected = number === selectedNumberOfTickets;
                return (
                  <Button
                    key={number}
...
