...
        cancelHold();
        setSelectedShow(undefined);
        setSelectedShowtime(undefined);
        setSelectedNumberOfTickets(NaN);
      }}
    >
      Cancel
    </Button>
  );
};

export default ScheduledHoldContent;

